--- a/style.css
+++ b/style.css
@@ -3,29 +3,65 @@ body{
     text-align: center;
     display: flex;
     flex-direction: column;
-	background:url(https://i.pinimg.com/564x/af/80/59/af805952c2deed17a3360ac3ec0bb7d4.jpg);
+    background:url(https://www.pixel4k.com/wp-content/uploads/2018/12/dark-abstract-amnesia-4k_1546277882.jpg.webp);
     background-position: center;
     background-size: cover;
 }
-#opp-choice{
-    width:90%;
-    height:30vh;
-    margin-bottom:10px;
-}
-#your-choice{
-    width:90%;
-    height:30vh;
+@media only screen
+and (min-device-width : 320px) and (max-device-width : 480px) {
+  /* Styles */
+  body{
+    background: url(https://i.pinimg.com/564x/af/80/59/af805952c2deed17a3360ac3ec0bb7d4.jpg);
+  }
 
-}
 #choices{
     width:90%;
     margin:0 auto;
     height:10vh;
 }
+#opp-choice,#your-choice{
+    width:80%;
+    height:auto;
+    
+}
+h1{
+    margin:0;
+}
 #choices img{
     width:30%;
     height:auto;
-    -webkit-animation: scale-in-tr 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: scale-in-tr 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    margin:5px;
     
+}}
+body{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
 }
+.container{
+    width:600px;
+    height:98vh;
+    background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+#opp-choice,#your-choice{
+    width:25%;
+    height:auto;
+}
+#choices{
+    margin-top:10px;
+    width:60%;
+    background-color: rgb(161, 157, 157);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;}
+#choices img{
+    width:20%;
+    height:auto
+}
+    
